--- a/php/php.ini
+++ b/php/php.ini
@@ -29,7 +29,7 @@ opcache.fast_shutdown = 1
 # Task definition artifacts are immutable on ECS and cache check time is 0 on local -> may as well make tasks faster
 opcache.enable_cli = 1
 
-# Note opcache.validate_timestamps = 0 is added for ECS instances by modifications in the Admin and Secure repos'
-# own Dockerfiles. The below is intended for development only (re-checks files immediately), and is rendered
+# Note opcache.validate_timestamps = 0 is added for ECS instances by modifications in apps' own deployment
+# Dockerfiles. The below is intended for development only (re-checks files immediately), and is rendered
 # redundant on ECS by that setting.
 opcache.revalidate_freq = 0
