Don't send errors to stdout in any env

--- a/php/php.ini
+++ b/php/php.ini
@@ -3,6 +3,7 @@ memory_limit = 768M
 
 date.timezone = "UTC"
 
+display_errors = 0
 error_log = /dev/stderr
 log_errors = 1
 log_errors_max_len = 8192
