--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -8,7 +8,14 @@
 
 name: Anchore Container Scan
 
-on: push
+on:
+  push:
+    branches: [master]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [master]
+  schedule:
+    - cron: '51 6 * * 1'
 
 jobs:
   Anchore-Build-Scan:
@@ -17,7 +24,7 @@ jobs:
     - name: Checkout the code
       uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag localbuild/testimage:latest      
+      run: docker build . --file Dockerfile --tag localbuild/testimage:latest
     - name: Run the local Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
       uses: anchore/scan-action@master
       with:
