--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -26,11 +26,9 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag localbuild/testimage:latest
     - name: Run the local Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
-      uses: anchore/scan-action@main
+      uses: anchore/scan-action@v3
       with:
-        image-reference: "localbuild/testimage:latest"
-        dockerfile-path: "Dockerfile"
-        acs-report-enable: true
+        image: "localbuild/testimage:latest"
     - name: Upload Anchore Scan Report
       uses: github/codeql-action/upload-sarif@v1
       with:
