--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -29,6 +29,7 @@ jobs:
       uses: anchore/scan-action@v3
       with:
         image: "localbuild/testimage:latest"
+        severity-cutoff: "high"
     - name: Upload Anchore Scan Report
       uses: github/codeql-action/upload-sarif@v1
       with:
