--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,15 @@ orbs:
 
 workflows:
   version: 2
+  build-tmp-on-push:
+    jobs:
+      - docker/publish:
+          context:
+            - docker-hub-creds
+          docker-password: DOCKER_HUB_ACCESS_TOKEN
+          docker-username: DOCKER_HUB_USERNAME
+          image: thebiggive/php
+          tag: '8.0'
   build:
     jobs:
       - docker/publish:
