Specify a default socket timeout of 8s

--- a/php/php.ini
+++ b/php/php.ini
@@ -10,6 +10,10 @@ log_errors_max_len = 8192
 # Allow for slow-running batch tasks
 max_execution_time = 1200
 
+# Socket timeout for e.g. Symfony Mailer [E]SMTP transport.
+# https://symfony.com/doc/current/mailer.html#using-a-3rd-party-transport
+default_socket_timeout = 8
+
 post_max_size = 8M
 
 # See https://secure.php.net/manual/en/opcache.configuration.php#ini.opcache.max-accelerated-files
