Temporarily run on push

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,10 @@ workflows:
           docker-username: DOCKER_HUB_USERNAME
           image: thebiggive/php
           tag: '8.1'
-    triggers:
-      - schedule:
-          cron: "5 5 * * *"
-          filters:
-            branches:
-              only:
-                - main
+#    triggers:
+#      - schedule:
+#          cron: "5 5 * * *"
+#          filters:
+#            branches:
+#              only:
+#                - main
