Fix square brackets confusing PHP at runtime

--- a/php/php.ini
+++ b/php/php.ini
@@ -10,7 +10,7 @@ log_errors_max_len = 8192
 # Allow for slow-running batch tasks
 max_execution_time = 1200
 
-# Socket timeout for e.g. Symfony Mailer [E]SMTP transport.
+# Socket timeout for e.g. Symfony Mailer (E)SMTP transport.
 # https://symfony.com/doc/current/mailer.html#using-a-3rd-party-transport
 default_socket_timeout = 8
 
