--- a/php/php.ini
+++ b/php/php.ini
@@ -10,7 +10,7 @@ log_errors_max_len = 8192
 # Allow for slow-running batch tasks
 max_execution_time = 1200
 
-# Socket timeout for e.g. Symfony Mailer (E)SMTP transport.
+# Socket timeout for e.g. Symfony Mailer ESMTP transport.
 # https://symfony.com/doc/current/mailer.html#using-a-3rd-party-transport
 default_socket_timeout = 8
 
@@ -34,6 +34,6 @@ opcache.fast_shutdown = 1
 opcache.enable_cli = 1
 
 # Note opcache.validate_timestamps = 0 is added for ECS instances by modifications in apps' own deployment
-# Dockerfiles. The below is intended for development only (re-checks files immediately), and is rendered
+# Dockerfiles. The below is intended for development only – it re-checks files immediately – and is rendered
 # redundant on ECS by that setting.
 opcache.revalidate_freq = 0
