INFRA-58 – for web apps, log the AWS Trace ID and the time taken to serve requests
Alongside Apache defaults

--- a/apache/slim.conf
+++ b/apache/slim.conf
@@ -15,6 +15,10 @@
     # Range 10.0.0.0 - 10.0.3.255
     RemoteIPInternalProxy 10.0.0.0/22
 
+    # https://aws.amazon.com/premiumsupport/knowledge-center/trace-elb-x-amzn-trace-id/
+    # https://www.ducea.com/2008/02/06/apache-logs-how-long-does-it-take-to-serve-a-request/
+    LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %b %D \"%{Referer}i\" \"%{User-Agent}i\" \"%{X-Amzn-Trace-Id}i\" **%T/%D**" combined
+
     <Directory /var/www/html/public>
         AllowOverride None
         Order Allow,Deny
