INFRA-58 – fix custom log format

--- a/apache/slim.conf
+++ b/apache/slim.conf
@@ -17,7 +17,11 @@
 
     # https://aws.amazon.com/premiumsupport/knowledge-center/trace-elb-x-amzn-trace-id/
     # https://www.ducea.com/2008/02/06/apache-logs-how-long-does-it-take-to-serve-a-request/
-    LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %b %D \"%{Referer}i\" \"%{User-Agent}i\" \"%{X-Amzn-Trace-Id}i\" **%T/%D**"
+    # Note that using no nickname seemed to fall back to the default/ upstream configuration. Using "common" as the
+    # nickname led to the format being overridden by a more concise format presumably defined elsewhere in the base
+    # container with the same nickname.
+    LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %b %D \"%{Referer}i\" \"%{User-Agent}i\" \"%{X-Amzn-Trace-Id}i\" **%T/%D**" extended
+    CustomLog /dev/stdout extended
 
     <Directory /var/www/html/public>
         AllowOverride None
