MAT-249 – increase `default_socket_timeout`

--- a/php/php.ini
+++ b/php/php.ini
@@ -10,9 +10,12 @@ log_errors_max_len = 8192
 ; Allow for slow-running batch tasks
 max_execution_time = 1200
 
-; Socket timeout for e.g. Symfony Mailer ESMTP transport.
-; https://symfony.com/doc/current/mailer.html#using-a-3rd-party-transport
-default_socket_timeout = 8
+; Socket timeout for impacts Symfony Mailer ESMTP transports but also e.g. MatchBot Redis.
+; The global default of 60s is known safe so we set it for now. We might consider a slightly
+; lower value for our apps if fast failing would be helpful in any situations. From behaviour
+; in mid 2022 we know that 8 seconds is too low for ElastiCache Redis in moderately-rare
+; (several times per week for very frequent tasks) ECS task run edge cases.
+default_socket_timeout = 60
 
 post_max_size = 8M
 
