Revert "Temporarily run on push"
This reverts commit 5a58759c27f12cdd003e1f2e4966cee0c8ae5312.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,10 @@ workflows:
           path: ./dev
           image: thebiggive/php
           tag: 'dev-8.1'
-#    triggers:
-#      - schedule:
-#          cron: "5 5 * * *"
-#          filters:
-#            branches:
-#              only:
-#                - main
+    triggers:
+      - schedule:
+          cron: "5 5 * * *"
+          filters:
+            branches:
+              only:
+                - main
