--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -1,5 +1,10 @@
 FROM thebiggive/php:8.1
 
+# CircleCI orb requires gpg for uploader validation
+RUN apt-get update -qq \
+ && apt-get gpg \
+ && rm -rf /var/lib/apt/lists/* /var/cache/apk/*
+
 # As of April 2022 and PHP 8.1, phpdbg isn't bundled and Debian stable repos don't seem to have
 # a straightforward way to get it. So we now maintain and publish a `dev-8.1` tag with Xdebug enabled,
 # for e.g. CI test coverage. This means we can use the normal `8.1` tag for Production without
