INFRA-107 – fix Mautic Apache vhost `AllowOverride`

--- a/apache/mautic.conf
+++ b/apache/mautic.conf
@@ -1,6 +1,6 @@
 # Like slim.conf but with a different `DocumentRoot` and no rewrite to
 # index.php. We leave the built-in Mautic `.htaccess` to do its own
-# rewriting.
+# rewriting (so we also flip the root's `AllowOverride` on).
 <VirtualHost *:80>
     DocumentRoot /var/www/html
     # Just use 'localhost' instead of exposing user supplied value
@@ -27,7 +27,7 @@
     CustomLog /dev/stdout extended
 
     <Directory /var/www/html>
-        AllowOverride None
+        AllowOverride All
         Order Allow,Deny
         Allow from All
     </Directory>
