--- a/apache/mautic.conf
+++ b/apache/mautic.conf
@@ -1,8 +1,10 @@
-# Like slim.conf but with a different `DocumentRoot` and no rewrite to
-# index.php. We leave the built-in Mautic `.htaccess` to do its own
-# rewriting (so we also flip the root's `AllowOverride` on).
+# Like slim.conf but with no rewrite to index.php. We leave the built-in
+# Mautic `.htaccess` to do its own rewriting, so need to flip the root's
+# `AllowOverride` on. We now set `public/` as the document root rather than
+# `docroot/`, so must set Mautic `composer.json`'s
+# `extra.mautic-scaffold.locations.web-root` accordingly.
 <VirtualHost *:80>
-    DocumentRoot /var/www/html
+    DocumentRoot /var/www/html/public
     # Just use 'localhost' instead of exposing user supplied value
     UseCanonicalName on
 
@@ -26,7 +28,7 @@
     LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %b %D \"%{Referer}i\" \"%{User-Agent}i\" \"%{X-Amzn-Trace-Id}i\" **%T/%D**" extended
     CustomLog /dev/stdout extended
 
-    <Directory /var/www/html>
+    <Directory /var/www/html/public>
         AllowOverride All
         Order Allow,Deny
         Allow from All
