INFRA-107 – Mautic back to *default* `docroot/`

--- a/apache/mautic.conf
+++ b/apache/mautic.conf
@@ -1,10 +1,9 @@
 # Like slim.conf but with no rewrite to index.php. We leave the built-in
 # Mautic `.htaccess` to do its own rewriting, so need to flip the root's
-# `AllowOverride` on. Mautic puts its doc root files into `/var/www/html`
-# / the working directory when Composer install finishes, so we need this
-# outer directory to be the `DocumentRoot`.
+# `AllowOverride` on. And we set Apache to use Composer Mautic's default
+# `DocumentRoot` of `docroot/`.
 <VirtualHost *:80>
-    DocumentRoot /var/www/html
+    DocumentRoot /var/www/html/docroot
     # Just use 'localhost' instead of exposing user supplied value
     UseCanonicalName on
 
@@ -28,7 +27,7 @@
     LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %b %D \"%{Referer}i\" \"%{User-Agent}i\" \"%{X-Amzn-Trace-Id}i\" **%T/%D**" extended
     CustomLog /dev/stdout extended
 
-    <Directory /var/www/html>
+    <Directory /var/www/html/docroot>
         AllowOverride All
         Order Allow,Deny
         Allow from All
