BG2-2520: Add PHP 8.2 and 8.3 builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,24 @@ workflows:
           image: thebiggive/php
           tag: '8.1'
       - docker/publish:
+          name: "Publish '8.2'"
+          context:
+            - docker-hub-creds
+          docker-password: DOCKER_HUB_ACCESS_TOKEN
+          docker-username: DOCKER_HUB_USERNAME
+          path: ./php8.2
+          image: thebiggive/php
+          tag: '8.2'
+      - docker/publish:
+          name: "Publish '8.3'"
+          context:
+            - docker-hub-creds
+          docker-password: DOCKER_HUB_ACCESS_TOKEN
+          docker-username: DOCKER_HUB_USERNAME
+          path: ./php8.3
+          image: thebiggive/php
+          tag: '8.3'
+      - docker/publish:
           name: "Publish '8.0'"
           context:
             - docker-hub-creds
@@ -41,6 +59,24 @@ workflows:
           path: ./dev
           image: thebiggive/php
           tag: 'dev-8.1'
+      - docker/publish:
+          name: "Publish 'dev-8.2'"
+          context:
+            - docker-hub-creds
+          docker-password: DOCKER_HUB_ACCESS_TOKEN
+          docker-username: DOCKER_HUB_USERNAME
+          path: ./php8.2-dev
+          image: thebiggive/php
+          tag: 'dev-8.2'
+      - docker/publish:
+          name: "Publish 'dev-8.3'"
+          context:
+            - docker-hub-creds
+          docker-password: DOCKER_HUB_ACCESS_TOKEN
+          docker-username: DOCKER_HUB_USERNAME
+          path: ./php8.2-dev
+          image: thebiggive/php
+          tag: 'dev-8.3'
     triggers:
       - schedule:
           cron: "5 5 * * *"
