--- a/apache/mautic.conf
+++ b/apache/mautic.conf
@@ -1,3 +1,6 @@
+# Not used live right now. This will need reviewing if & when we look at running Mautic
+# in Docker again, since we'll be on a new major version of the app.
+
 # Like slim.conf but with no rewrite to index.php. We leave the built-in
 # Mautic `.htaccess` to do its own rewriting, so need to flip the root's
 # `AllowOverride` on. And we set Apache to use Composer Mautic's default
