--- a/php8.2/Dockerfile
+++ b/php8.2/Dockerfile
@@ -1,7 +1,4 @@
-# Hopefully for a short while, we are copying the root `../Dockerfile` and
-# building otherwise the same as 8.1. Delete this as soon as stable Mautic
-# supports newer!
-FROM php:8.0-apache-buster
+FROM php:8.2-apache-bullseye
 
 RUN apt-get update \
  && apt-get install -y git-core libicu-dev libzip-dev zip \
@@ -12,9 +9,7 @@ RUN docker-php-ext-enable opcache
 
 RUN pecl install redis && rm -rf /tmp/pear && docker-php-ext-enable redis
 
-# TODO When upgrading to PHP 8.1+, we'll want to make the `mautic` site
-# available there too (alongside `slim`).
-COPY apache/mautic.conf /etc/apache2/sites-available/
+COPY apache/slim.conf /etc/apache2/sites-available/
 COPY php/php.ini /usr/local/etc/php/
 
 # Composer
@@ -29,7 +24,7 @@ RUN curl -sS https://getcomposer.org/installer | php -- --version=2.4.1 --instal
 RUN a2enmod rewrite \
  && a2enmod remoteip \
  && a2dissite 000-default \
- && a2ensite mautic \
+ && a2ensite slim \
  && echo ServerName localhost >> /etc/apache2/apache2.conf
 
 # Docker and multi-OS dev makes it hard to guarantee user matches for files inside app code, and
