--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,36 +9,48 @@ workflows:
     jobs:
       - docker/publish:
           context: [docker-hub-creds]
+          docker-password: DOCKER_HUB_ACCESS_TOKEN
+          docker-username: DOCKER_HUB_USERNAME
           name: "Publish 'latest', currently 8.2"
           path: ./php8.2
           image: thebiggive/php
           tag: 'latest'
       - docker/publish:
           context: [docker-hub-creds]
+          docker-password: DOCKER_HUB_ACCESS_TOKEN
+          docker-username: DOCKER_HUB_USERNAME
           name: "Publish '8.1'"
           path: ./php8.1
           image: thebiggive/php
           tag: '8.1'
       - docker/publish:
           context: [docker-hub-creds]
+          docker-password: DOCKER_HUB_ACCESS_TOKEN
+          docker-username: DOCKER_HUB_USERNAME
           name: "Publish '8.2'"
           path: ./php8.2
           image: thebiggive/php
           tag: '8.2'
       - docker/publish:
           context: [docker-hub-creds]
+          docker-password: DOCKER_HUB_ACCESS_TOKEN
+          docker-username: DOCKER_HUB_USERNAME
           name: "Publish '8.3'"
           path: ./php8.3
           image: thebiggive/php
           tag: '8.3'
 #      - docker/publish:
 #          context: [docker-hub-creds]
+#          docker-password: DOCKER_HUB_ACCESS_TOKEN
+#          docker-username: DOCKER_HUB_USERNAME
 #          name: "Publish 'dev-8.2'"
 #          path: ./php8.2/dev
 #          image: thebiggive/php
 #          tag: 'dev-8.2'
 #      - docker/publish:
 #          context: [docker-hub-creds]
+#          docker-password: DOCKER_HUB_ACCESS_TOKEN
+#          docker-username: DOCKER_HUB_USERNAME
 #          name: "Publish 'dev-8.3'"
 #          path: ./php8.3/dev
 #          image: thebiggive/php
