INFRA-85 – don't expose PHP in headers

--- a/php/php.ini
+++ b/php/php.ini
@@ -40,3 +40,5 @@ opcache.enable_cli = 1
 ; Dockerfiles. The below is intended for development only – it re-checks files immediately – and is rendered
 ; redundant on ECS by that setting.
 opcache.revalidate_freq = 0
+
+expose_php = Off
