INFRA-87 – add `X-Content-Type-Options: nosniff` for all responses

--- a/apache/mautic.conf
+++ b/apache/mautic.conf
@@ -34,5 +34,6 @@
         AllowOverride All
         Order Allow,Deny
         Allow from All
+        Header always set X-Content-Type-Options nosniff
     </Directory>
 </VirtualHost>
