--- a/apache/slim.conf
+++ b/apache/slim.conf
@@ -28,6 +28,8 @@
         Order Allow,Deny
         Allow from All
 
+        Header always set X-Content-Type-Options nosniff
+
         RewriteEngine On
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteRule ^ index.php [QSA,L]
